--- a/CreateProductPage.css
+++ b/CreateProductPage.css
@@ -87,6 +87,7 @@ img{
 .informationForm{
   border:2px solid blue;
   width:90%;
+  /* width:100%; */
   margin-left:4.5rem;
 }
 
@@ -434,8 +435,43 @@ margin-left:0.9rem;
  margin-right:0.2rem;
 }
 
-/* media */
-@media screen and (max-width: 88.99rem){
+.otherInformationInputPart4{
+  margin-top:4rem;
+}
+
+.otherInformationPart4AllInput{
+  display:flex;
+}
+
+.otherInformationBoxNumberInput{
+  width:6.96rem !important;
+  margin-bottom:1rem;
+}
+
+.otherInformationCalculationTitle{
+  margin-right:0.55rem;
+}
+
+.otherInformationCalculationInput{
+  width:3.48rem !important;
+}
+
+.otherInformationBoxNumber{
+  margin-right:1.7rem;
+ 
+}
+
+.otherInformationQuantity,.otherInformationUnitNetWeight,
+.otherInformationNumber,.otherInformationVolume,.otherInformationSpecification,.otherInformationCalculationTitle{
+   margin-left:1rem;
+}
+
+.otherInformationVolume{
+   margin-right:4rem;
+}
+/* _________________media_________________ */
+/* 88.99 */
+@media screen and (max-width: 92rem){
   .informationForm{
   border:2px solid darkslateblue;
   width:100%;
@@ -463,8 +499,8 @@ margin-left:0.9rem;
 }
 }
 
-
-@media screen and (max-width: 73.30rem){
+/* 73.30 */
+@media screen and (max-width: 75rem){
 .informationForm{
   border:2px solid darkorange;
   width:100%;
@@ -551,9 +587,38 @@ input[type="text"],input[type="number"]{
   height:4.25rem !important;
   margin-left:5.9rem;
   }
+
+.otherInformationBoxNumberInput{
+  width:5rem !important;
+  margin-bottom:1rem;
 }
 
-@media screen and (max-width:54.85rem){
+.otherInformationCalculationTitle{
+  margin-right:0.55rem;
+}
+
+.otherInformationCalculationInput{
+  width:2.5rem !important;
+}
+
+.otherInformationBoxNumber{
+  margin-right:1.7rem;
+ 
+}
+
+.otherInformationQuantity,.otherInformationUnitNetWeight,
+.otherInformationNumber,.otherInformationVolume,.otherInformationSpecification,.otherInformationCalculationTitle{
+   margin-left:1rem;
+}
+
+.otherInformationVolume{
+   margin-right:4rem;
+}
+}
+
+
+/* 54.85rem */
+@media screen and (max-width:55.99rem){
 .informationForm{
   border:2px solid orange;
   width:100%;
@@ -612,7 +677,47 @@ input[type="text"],input[type="number"]{
   margin-left:5.3rem;
   }
 
-  .otherInformationPurchaseTitle{
+.otherInformationSaleDateTitle{
+margin-right:0rem;
+}
+
+.otherInformationIfInvalid{
+margin-left: 3.8rem;
+margin-right:0rem;
+}
+
+.otherInformationCalendarImgRelative{
+  position:relative;
+}
+
+.otherInformationCalendarImg{
+  position:absolute;
+  left:16.6rem;
+  top:0.3rem;
+}
+
+.otherInformationCalendarImg2{
+   position:absolute;
+   left:30.1rem;
+   top:0.3rem;
+}
+
+.otherInformationDrugOffTitle{
+  margin-right:0rem;
+}
+
+.otherInformationTestValue{
+  margin-left:1.8rem;
+  margin-right:0.4rem;
+}
+
+
+
+.otherInformationInputPart3{
+  margin-top:8rem !important;
+}
+
+.otherInformationPurchaseTitle{
 margin-right:0rem;
 }
 
@@ -632,9 +737,39 @@ margin-right:0rem;
   margin-right:0rem;
 }
 
+.otherInformationBoxNumberInput{
+  width:5rem !important;
+  margin-bottom:1rem;
 }
 
-@media screen and (max-width: 50.20rem){ 
+.otherInformationCalculationTitle{
+  margin-right:0rem;
+  margin-left:0rem;
+}
+
+.otherInformationCalculationInput{
+  width:2.5rem !important;
+}
+
+.otherInformationBoxNumber{
+  margin-right:0rem;
+ 
+}
+
+.otherInformationQuantity,.otherInformationUnitNetWeight,
+.otherInformationNumber,.otherInformationVolume,.otherInformationSpecification{
+   margin-left:1rem;
+}
+
+.otherInformationVolume{
+   margin-right:0rem;
+}
+
+
+
+}
+/* 50.20 */
+@media screen and (max-width: 51.50rem){ 
 
 .informationForm{
   border:2px solid black;
@@ -654,10 +789,6 @@ margin-right:1rem;
 .otherInformationSalesTitle{
 margin-right:1rem;
 }
-
-/* .otherInformationSaleCurrencyFlex{
-  display:flex;
-} */
 
 .otherInformationSaleCurrencyTitle{
   margin-right:1rem;
@@ -693,10 +824,38 @@ width:6rem !important;
 width:6rem !important; 
 }
 
+.otherInformationBoxNumberInput{
+  width:4rem !important;
+  margin-bottom:1rem;
+}
+
+.otherInformationCalculationTitle{
+  margin-right:0rem;
+  margin-left:0rem;
+}
+
+.otherInformationCalculationInput{
+  width:2.5rem !important;
+}
+
+.otherInformationBoxNumber{
+  margin-right:0rem;
+ 
+}
+
+.otherInformationQuantity,.otherInformationUnitNetWeight,
+.otherInformationNumber,.otherInformationVolume,.otherInformationSpecification{
+   margin-left:1rem;
+}
+
+.otherInformationVolume{
+   margin-right:0rem;
+}
+
 }
  
 
-@media screen and (max-width: 48.20rem){
+@media screen and (max-width: 48.90rem){
 .informationForm{
   border:2px solid darkcyan;
   width:100%;
@@ -709,23 +868,13 @@ width:6rem !important;
   margin-top:2.94rem;
   }
 
-.otherInformationSaleDateTitle{
-margin-right:1.53rem;
-}
-
 .otherInformationSaleDateInput{
     width:9.64rem !important; 
     height:1.88rem !important;
 }
 
-.otherInformationDash{
-  margin-right:0.5rem;
-  margin-left:0.5rem;
-  font-weight:bold;
-}
-
 .otherInformationIfInvalid{
-margin-left: 1.05rem;
+margin-left: 3rem;
 margin-right:0rem;
 }
 
@@ -734,19 +883,24 @@ margin-right:0rem;
   height:1.88rem !important;
 }
 
+.otherInformationSaleDateTitle{
+margin-right:0rem !important;
+
+}
+
 .otherInformationCalendarImgRelative{
   position:relative;
 }
 
 .otherInformationCalendarImg{
   position:absolute;
-  left:16rem;
+  left:14.6rem !important;
   top:0.3rem;
 }
 
 .otherInformationCalendarImg2{
    position:absolute;
-   left:27.5rem;
+   left:26.1rem !important;
    top:0.3rem;
 }
 
@@ -775,8 +929,8 @@ margin-right:0rem;
   width:6.3rem !important;
 }
 }
-
-@media screen and (max-width: 46.75rem){
+/* 46.75 */
+@media screen and (max-width: 47.99rem){
   .informationForm{
   border:2px solid pink;
   width:100%;
@@ -827,6 +981,35 @@ input[type="text"],input[type="number"]{
   height:4.25rem !important;
   margin-left:5.3rem;
   }
+
+  .otherInformationBoxNumberInput{
+  width:3.5rem !important;
+  margin-bottom:1rem;
+}
+
+.otherInformationCalculationTitle{
+  margin-right:0rem;
+  margin-left:-1rem;
+}
+
+.otherInformationCalculationInput{
+  width:2.5rem !important;
+}
+
+.otherInformationBoxNumber{
+  margin-right:0rem;
+ 
+}
+
+.otherInformationQuantity,.otherInformationUnitNetWeight,
+.otherInformationNumber,.otherInformationVolume,.otherInformationSpecification{
+   margin-left:1rem;
+}
+
+.otherInformationVolume{
+   margin-right:0rem;
+}
+
 }
 
 @media screen and (max-width: 45.35rem){
@@ -834,6 +1017,36 @@ input[type="text"],input[type="number"]{
   border:2px solid darkmagenta;
   width:100%;
   margin-left:0rem;
+}
+
+.otherInformationSaleDateInput{
+    width:7rem !important; 
+    height:1.88rem !important;
+}
+
+.otherInformationIfInvalid{
+margin-left: 1rem;
+margin-right:0rem;
+}
+
+.otherInformationSaleDateTitle{
+margin-right:0rem;
+}
+
+.otherInformationCalendarImgRelative{
+  position:relative;
+}
+
+.otherInformationCalendarImg{
+  position:absolute;
+  left:12rem !important;
+  top:0.3rem;
+}
+
+.otherInformationCalendarImg2{
+   position:absolute;
+   left:20.85rem !important;
+   top:0.3rem;
 }
 
 .otherInformationSetPriceTitle{
@@ -866,12 +1079,12 @@ input[type="text"],input[type="number"]{
 }
 
 .otherInformationDrugOffTitle{
-  margin-right:1rem;
+  margin-right:0rem;
 }
 
 .otherInformationTestValue{
   margin-left:1rem;
-  margin-right:1rem;
+  margin-right:0.4rem;
 }
 
 .otherInformationLeast{
@@ -905,10 +1118,38 @@ input[type="text"],input[type="number"]{
   margin-right:0.6rem;
 }
 
+ .otherInformationBoxNumberInput{
+  width:3rem !important;
+  margin-bottom:1rem;
+}
+
+.otherInformationCalculationTitle{
+  margin-right:0rem;
+  margin-left:-1rem;
+}
+
+.otherInformationCalculationInput{
+  width:2rem !important;
+}
+
+.otherInformationBoxNumber{
+  margin-right:0rem;
+ 
+}
+
+.otherInformationQuantity,.otherInformationUnitNetWeight,
+.otherInformationNumber,.otherInformationVolume,.otherInformationSpecification{
+   margin-left:1rem;
+}
+
+.otherInformationVolume{
+   margin-right:0rem;
+}
+
 }
 
 
-@media screen and (max-width: 40.99rem){
+/* @media screen and (max-width: 40.99rem){
 .informationForm{
   border:2px solid darkolivegreen;
   width:100%;
@@ -952,13 +1193,13 @@ margin-right:0rem;
 
 .otherInformationCalendarImg{
   position:absolute;
-  left:14.3rem;
+  left:13rem !important;
   top:0.3rem;
 }
 
 .otherInformationCalendarImg2{
    position:absolute;
-   left:24.2rem;
+   left:22.85rem !important;
    top:0.3rem;
 }
 
@@ -993,12 +1234,12 @@ margin-right:0rem;
 }
 
 .otherInformationDrugOffTitle{
-  margin-right:1rem;
+  margin-right:0rem;
 }
 
 .otherInformationTestValue{
   margin-left:1rem;
-  margin-right:1rem;
+  margin-right:0.4rem;
 }
 
 .otherInformationLeast{
@@ -1051,10 +1292,10 @@ width:5rem !important;
 .otherInformationTaxCategoryInput{
 width:5rem !important; 
 }
-}
+} */
 
-
-@media screen and (max-width: 40.69rem){
+/* 40.69 */
+@media screen and (max-width: 41.99rem){
   .informationForm{
   border:2px solid red;
   width:100%;
@@ -1094,6 +1335,22 @@ input[type="text"],input[type="number"]{
   margin-left:5.1rem;
   }
 
+  .otherInformationCalendarImgRelative{
+  position:relative;
+}
+
+.otherInformationCalendarImg{
+  position:absolute;
+  left:11.6rem !important;
+  top:0.3rem;
+}
+
+.otherInformationCalendarImg2{
+   position:absolute;
+   left:20.45rem !important;
+   top:0.3rem;
+}
+
   .otherInformationTitleInput{
   margin-top:1rem;
   width:6.95rem !important;
@@ -1126,9 +1383,83 @@ input[type="text"],input[type="number"]{
   font-size:1.03rem;
   }
 
+.otherInformationPurchase{
+   margin-right:2.80rem;
 }
 
-@media screen and (max-width:38.99rem){
+.otherInformationPurchaseTitle{
+margin-right:0rem;
+}
+
+.otherInformationSalesTitle{
+margin-right:0rem;
+}
+
+.otherInformationSaleCurrencyTitle{
+  margin-right:0rem;
+}
+
+.otherInformationCostCalculation{
+ margin-left:1rem;
+ margin-right:0rem;
+}
+
+.otherInformationTaxCategory{
+margin-left:0.9rem;
+ margin-right:0.2rem;
+}
+
+.otherInformationPurchaseInput{
+  width:9rem !important; 
+}
+
+.otherInformationSalesInput{
+width:9rem !important; 
+}
+
+.otherInformationSaleCurrencyInput{
+width:6rem !important; 
+}
+
+.otherInformationCostCalculationInput{
+width:6rem !important; 
+}
+
+.otherInformationTaxCategoryInput{
+width:6rem !important; 
+}
+
+ .otherInformationBoxNumberInput{
+  width:2.6rem !important;
+  margin-bottom:1rem;
+}
+
+.otherInformationCalculationTitle{
+  margin-right:0rem;
+  margin-left:-1rem;
+}
+
+.otherInformationCalculationInput{
+  width:2rem !important;
+}
+
+.otherInformationBoxNumber{
+  margin-right:0rem;
+ 
+}
+
+.otherInformationQuantity,.otherInformationUnitNetWeight,
+.otherInformationNumber,.otherInformationVolume,.otherInformationSpecification{
+   margin-left:1rem;
+}
+
+.otherInformationVolume{
+   margin-right:0rem;
+}
+
+}
+
+@media screen and (max-width:39.50rem){
  .informationForm{
   border:2px solid darkred;
   width:100%;
@@ -1157,14 +1488,13 @@ input[type="text"],input[type="number"]{
 
 .otherInformationCalendarImg{
   position:absolute;
-  left:14.05rem;
+  left:11.4rem !important;
   top:0.3rem;
 }
 
 .otherInformationCalendarImg2{
    position:absolute;
-   left:23.9rem;
-   top:0.3rem;
+   left:20.25rem !important;
 }
 
 .otherInformationTitleInput{
@@ -1206,7 +1536,7 @@ input[type="text"],input[type="number"]{
 
 
 
-@media screen and (max-width:37.68rem){
+@media screen and (max-width:38.99rem){
   .informationForm{
   border:2px solid purple;
   width:100%;
@@ -1303,7 +1633,7 @@ input[type="text"],input[type="number"]{
 .otherInformationButton{
    position:absolute;
    bottom:0.3rem;
-   right:-5.8rem;
+   right:-4.8rem;
 }
 
 .otherInformationSaleDate{
@@ -1313,14 +1643,14 @@ input[type="text"],input[type="number"]{
   }
 
 .otherInformationSaleDateInput{
-    width:8rem !important; 
+    width:8.05rem !important; 
     height:1.88rem !important;
-     margin-left:0.8rem;
+     margin-left:2.4rem !important;
 }
 
 .otherInformationDash{
-  margin-right:-0.6rem !important;
-  margin-left:0.3rem;
+  margin-right:-2.2rem !important;
+  margin-left:0.1rem;
   font-weight:bold;
 }
 
@@ -1341,13 +1671,13 @@ margin-right:3.4rem;
 
 .otherInformationCalendarImg{
   position:absolute;
-  left:14.3rem;
+  left:14.9rem !important;
   top:0.3rem;
 }
 
 .otherInformationCalendarImg2{
    position:absolute;
-   left:24.05rem;
+   left:24.09rem !important;
    top:0.3rem;
 } 
 
@@ -1475,7 +1805,7 @@ margin-right:3.2rem;
 }
 
 .otherInformationSubjectsButton{
-  right:-6rem;
+  right:-5rem;
 }
 
 .otherInformationPurchaseInput,.otherInformationSalesInput{
@@ -1512,10 +1842,57 @@ margin-right:3.2rem;
 .otherInformationTaxCategoryInput{
   width:17.50rem  !important;
 }
+
+.otherInformationInputPart3{
+  margin-top:1rem !important;
 }
 
+.otherInformationInputPart4{
+  margin-top:1rem !important;
+}
 
-@media screen and (max-width:531px){
+.otherInformationPart4AllInput{
+  display:block;
+}
+
+.otherInformationBoxNumberInput{
+  width:17.50rem !important;
+}
+
+.otherInformationCalculationTitle{
+  margin-left:0rem !important;
+}
+
+.otherInformationCalculationInput{
+  width:5.1rem !important;
+}
+
+.otherInformationBoxNumber{
+  margin-right:1.7rem;
+  margin-left:0rem;
+   margin-right:3.2rem;
+ 
+}
+
+.otherInformationVolume{
+   margin-right:5.2rem;
+   margin-left:0rem;
+} 
+
+.otherInformationSpecification{
+   margin-right:5.2rem;
+   margin-left:0rem;
+}
+
+.otherInformationCalculationTitle{
+   margin-right:4.2rem;
+   margin-left:0rem;
+}
+
+}
+
+/* 531px */
+@media screen and (max-width:33.99rem){
 .informationForm{
   border:2px solid blue;
   width:100%;
@@ -1537,7 +1914,7 @@ input[type="text"],input[type="number"]{
 .otherInformationButton{
    position:absolute;
    bottom:0.3rem;
-   right:-6rem;
+   right:-4.8rem !important ; 
 }
 
 .otherInformationDescriptionInput{
@@ -1551,7 +1928,7 @@ input[type="text"],input[type="number"]{
   }
 
 .otherInformationSaleDateInput{
-    width:5.85rem !important; 
+    width:6.1rem !important; 
     height:1.88rem !important;
 }
 
@@ -1562,12 +1939,12 @@ input[type="text"],input[type="number"]{
 .otherInformationButton{
    position:absolute;
    bottom:0.3rem;
-   right:-6rem;
+   right:-4.8rem !important;
 }
 
 .otherInformationDash{
-  margin-right:-0.5rem !important;
-  margin-left:0.3rem;
+  margin-right:-2.3rem !important;
+  margin-left:0.1rem;
   font-weight:bold;
 }
 
@@ -1582,13 +1959,13 @@ margin-right:3.5rem;
 
 .otherInformationCalendarImg{
   position:absolute;
-  left:12.8rem;
+  left:12.95rem !important;
   top:0.3rem;
 }
 
 .otherInformationCalendarImg2{
    position:absolute;
-   left:20.1rem;
+   left:20.1rem !important;
    top:0.3rem;
 } 
 
@@ -1659,8 +2036,6 @@ margin-right:3.5rem;
 }
 
 .otherInformationCostCalculationInput{
-  /* margin-top:1rem;
-  margin-bottom:1rem; */
   width:13.50rem  !important;
 }
 
@@ -1668,6 +2043,13 @@ margin-right:3.5rem;
   width:13.50rem  !important;
 }
 
+.otherInformationBoxNumberInput{
+  width:13.50rem !important;
+}
+
+.otherInformationCalculationInput{
+  width:3.79rem !important;
+}
 }
 
 @media screen and (max-width:452px){
@@ -1678,36 +2060,118 @@ margin-right:3.5rem;
 }
 
 .select{
-  width:11rem;
+  width:17rem;
   height:1.88rem;
 }
 
 input[type="text"],input[type="number"]{
-  width:11rem;
+  width:17rem;
   height:1.88rem;
   border-color: lightgray;
   border-radius: 0rem;
 }
 
+.otherInformationSupplierInput{
+   width:11rem !important;
+}
+
 .otherInformationButton{
    position:absolute;
    bottom:0.3rem;
-   right:-1rem;
+   right:0.65rem !important;
 }
 
 .otherInformationDescriptionInput{
-  width:11rem !important;
+  width:17rem !important;
   height:4.25rem !important;
   margin-left:5.55rem;
   }
 
+.otherInformationSaleDateInput{
+    width:6.6rem !important; 
+    height:1.88rem !important;
+}
+
+ 
+
+/* .otherInformationDash{
+  margin-right:-2.3rem !important;
+  margin-left:0.1rem;
+  font-weight:bold;
+} */
+
+.otherInformationIfInvalid{
+margin-left: 0rem;
+margin-right:3.5rem;
+}
+
+.otherInformationCalendarImgRelative{
+  position:relative;
+}
+
+.otherInformationCalendarImg{
+  position:absolute;
+  left:13.4rem !important;
+  top:0.3rem;
+}
+
+.otherInformationCalendarImg2{
+   position:absolute;
+   left:21.09rem !important;
+   top:0.3rem;
+} 
+
+.otherInformationIfInvalidSelect{
+  width:14.2rem !important; 
+  height:1.88rem !important;
+  margin-top:1rem !important;
+}
+
+.otherInformationLeastInput{
+    width:4.05rem !important;
+    height:1.88rem!important;
+    margin-top:1rem;
+  }
+
+.otherInformationMaximumInput{
+      width:4.05rem  !important;
+      height:1.88rem !important;
+       margin-top:1rem;
+}
+
+.otherInformationButtonRelative{
+   position:relative;
+}
+
 .otherInformationSubjectsButton{
-  left:15.6rem;
+  right:-3rem;
 }
 
 .otherInformationPurchaseInput,.otherInformationSalesInput{
-  width:7.5rem  !important;
+  width:8.3rem  !important;
 }
+
+.otherInformationSaleCurrencyInput{
+  width:14.20rem  !important;
+}
+
+.otherInformationCostCalculationInput{
+  width:14.20rem  !important;
+}
+
+.otherInformationTaxCategoryInput{
+  width:14.20rem  !important;
+}
+
+.otherInformationBoxNumberInput{
+  width:14.20rem !important;
+}
+
+.otherInformationCalculationInput{
+  width:3.79rem !important;
+}
+
+
 }
 
 
