--- a/CreateProductPage.css
+++ b/CreateProductPage.css
@@ -1361,8 +1361,8 @@ width:6rem !important;
 
 @media screen and (max-width:41.50rem){
   .informationForm{
-  /* border:2px solid purple; */
-  width:95%;
+  border:2px solid purple;
+  width:90%;
   margin:0 auto;
 }
 
@@ -1735,10 +1735,10 @@ margin-right:3.2rem;
 
 
 
-@media screen and (max-width:35.50rem){
+@media screen and (max-width:36.50rem){
 .informationForm{
-  /* border:2px solid blue; */
-  width:95%;
+  border:2px solid blue;
+  width:90%;
   margin:0 auto;
 }
 
@@ -1895,10 +1895,10 @@ margin-right:3.5rem;
 }
 }
 
-@media screen and (max-width:29.99rem){
+@media screen and (max-width:32rem){
 .informationForm{
-  /* border:2px solid yellow; */
-  width:100%;
+  border:2px solid yellow;
+  width:90%;
   margin:0 auto;
 }
 
@@ -2003,13 +2003,18 @@ margin-right:3.5rem;
 }
 
 .otherInformationCalculationInput{
-  width:3.79rem !important;
+  width:3.4rem !important;
 }
 
 }
 
-
-
+@media screen and (max-width:25.60rem){
+.informationForm{
+  border:2px solid PINK;
+  width:100%;
+  margin:0 auto;
+}
+}
 
 
 
